--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 log = "0.4"
-wasm-bindgen = "0.2.58"
+wasm-bindgen = "0.2.78"
 wasm-logger = "0.2"
 wee_alloc = { version = "0.4.4", optional = true }
-js-sys = "0.3.54"
+js-sys = "0.3.55"
 console_error_panic_hook = "0.1.7"
 lazy_static = "1.4.0"
 
@@ -33,4 +33,5 @@ features = [
   'WebGlProgram',
   'WebGlShader',
   'Window',
+  'HtmlScriptElement',
 ]
