convert to webgl2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,10 @@ features = [
   'Element',
   'HtmlCanvasElement',
   'WebGlBuffer',
-  'WebGlRenderingContext',
+  'WebGl2RenderingContext',
   'WebGlProgram',
   'WebGlShader',
   'Window',
   'HtmlScriptElement',
+  'WebGlVertexArrayObject',
 ]
