get colors averaging correctly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,5 +35,7 @@ features = [
   'Window',
   'HtmlScriptElement',
   'WebGlUniformLocation',
-  'Performance'
+  'Performance',
+  'WebGlFramebuffer',
+  'WebGlTexture',
 ]
