create fps indicator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,5 +38,6 @@ features = [
   'Performance',
   'WebGlFramebuffer',
   'WebGlTexture',
-  'HtmlAnchorElement'
+  'HtmlAnchorElement',
+  'HtmlParagraphElement',
 ]
