enable first-person viewing mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,5 +41,8 @@ features = [
   'HtmlAnchorElement',
   'HtmlParagraphElement',
   'WheelEvent',
-  'KeyboardEvent'
+  'KeyboardEvent',
+  'HtmlButtonElement',
+  'DomTokenList',
+  'HtmlDivElement',
 ]
