--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ console_error_panic_hook = "0.1.7"
 lazy_static = "1.4.0"
 wasm-bindgen-futures = "0.4.29"
 futures = "0.3.19"
+regex = "1.5.4"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
